# backend_optimizer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.ROS  combined.py  package.xml  setup.py
include/: backend_optimizer.h  kdtree.h
latex/: IEEEtran.cls  abstract.tex  conclusions.tex  derivation.lyx  derivation.tex  edge_optimization.tex  edge_vs_pose_optimization.tex  implementation.tex  introduction.tex  library.bib  main.out  main.tex  results.tex
latex/figures/: multiple_lc_graph.tex  simple_graph.tex
python/: GPO.py  MC_robot.py  REO.py  backend.py  combined_plots.py  compare_REO_and_GTSAM.py  complicated_plots.py  controller.py  data1.txt  data2.txt  data3.txt  hardware_plots.py  heading_error.py  kdtree_test.py  keyframe_matcher_sim.py  main.py  multi_agent_backend  multi_agent_hw.py  multi_agent_parse.py  multi_agent_plots.py  noisy_edges.py  optimization_data.txt  optimizer.py  process_time_data.py  robot.py  ros_kf_matcher  rosbag_parse.py  simple_house.g2o  well_conditioned.py
src/: backend_optimizer.cpp  backend_optimizer_wrapper.cpp  kdtree.cpp  kdtree.cpp.autosave
src/backend_optimizer/: __init__.py
