<?xml version="1.0"?>
<package>
  <name>backend_optimizer</name>
  <version>0.0.0</version>
  <description>The backend_optimizer package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>



  <export>

  </export>
</package>
